Prevent vertical videos from overflowing the viewport (#36966)

--- a/app/javascript/styles_new/mastodon/components.scss
+++ b/app/javascript/styles_new/mastodon/components.scss
@@ -7492,6 +7492,8 @@ a.status-card {
   color: var(--color-text-on-media);
   background: var(--color-bg-media);
   max-width: 100%;
+  max-height: max(400px, 60vh);
+  margin-inline: auto;
   border-radius: 8px;
   box-sizing: border-box;
   display: flex;
